--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* -----fonts family link--- */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 *{
     margin: 0;
@@ -11,7 +12,7 @@ img{
     max-width: 100%;
     vertical-align: middle;
 }
-h1,h2,h3,h4,h5,h6 p,ol,ul{
+h1,h2,h3,h4,h5,h6 p, ol, ul{
     margin: 0;
     padding: 0;
 }
@@ -46,20 +47,21 @@ a{
 /* ---common head css end----- */
 /* ------navber part css start------- */
 .main_manu{
-    padding: 26px 0;
+    padding: 26px 0px;
     border-bottom: 1px solid #EAE8F3;
     text-transform: uppercase;
 }
 .main_manu img{
     width: 70px;
 } 
-.main_manu ul{
+.main_manu .main_ul{
     gap: 76px;
 }
-.main_manu ul li{
+.main_manu .main_ul li{
     position: relative;
+    height: 21px;
 }
-.main_manu ul li a{
+.main_manu .main_ul li a{
     font-size: 14px;
     font-weight: 400;
     font-family: var(--ubuntu);
@@ -97,7 +99,7 @@ a{
     color: #fff;
     background-color: var(--primary);
 }
-.main_manu ul li::before{
+.main_manu .main_ul li::before{
     content: "";
     width: 0;
     height: 2px;
@@ -107,28 +109,29 @@ a{
     top: 20px;
     transition: .3s all linear;
 }
-.main_manu ul li:hover::before{
+.main_manu .main_ul li:hover::before{
     width: 100%;
 }
-.main_manu ul .fit_before:hover::before{
+.main_manu .main_ul .fit_before:hover::before{
     width: 62%;
 }
-.main_manu ul li ul{
-    margin-top: 10px;
+.main_manu .main_ul li ul{
+    margin-top: 6px;
     border-radius: 8px;
     gap: 10px;
     padding: 15px;
     background-color: var(--primary);
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
     visibility: hidden;
+    transition: .2s all linear;
 }
-.main_manu ul li ul li a{
+.main_manu .main_ul li ul li a{
     color: #fff !important;
 }
-.main_manu ul li:hover ul{
+.main_manu .main_ul li:hover ul{
     visibility: visible;
 }
-.main_manu ul li ul li a::before{
+.main_manu .main_ul li ul li a::before{
     background-color: #fff;
 }
 /* ------navber part css end------- */
@@ -542,3 +545,100 @@ a{
     background-color: var(--primary);
 }
  /* -----Testimonials-------parft---end----- */
+ /* ---Subscribe To Newsletter-----parft start--- */
+ #subscribe{
+    padding-top: 121px;
+    padding-bottom: 128px;
+ }
+ #subscribe .email_button{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin-top: 59px;
+ }
+ .email_button input{
+    width: 400px;
+    height: 81px;
+    border: none;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 400;
+    font-family: var(--ubuntu);
+    padding-left: 38px;
+    background-color: #F5F5F5;
+    color: var(--primary);
+ }
+ .email_button a{
+    width: 196px;
+    height: 81px;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 400;
+    font-family: var(--ubuntu);
+    background-color: var(--primary);
+    color: #FBFBFB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+ /* --Subscribe To Newsletter--part end- */
+ /* ------footer--part star */
+ footer{
+    padding-top: 99px;
+    padding-bottom: 124px;
+    background-color: var(--primary);
+    position: relative;
+ }
+ footer .footer_row{
+    display: flex;
+    gap: 105px;
+    justify-content: end;
+ }
+ .footer_row .footer_col h3{
+    font-size: 22px;
+    font-weight: 700;
+    font-family: var(--ubuntu);
+    color: #FBFBFB;
+    margin-bottom: 35px;
+ }
+ .footer_row .footer_col ul li a{
+    font-size: 16px;
+    font-weight: 400;
+    font-family: var(--ubuntu);
+    color: #FBFBFB;
+    line-height: 54px;
+ }
+ .footer_col .footer_icons{
+    display: flex;
+    gap: 16px;
+    margin-top: 23px;
+ }
+.footer_col .footer_icons i{
+    font-size: 16px;
+    width: 31px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: #FAFAFC;
+    color: var(--primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+footer .footer_img{
+    width: 618px; 
+    position: absolute;
+    left: 0;
+    bottom: 40px;
+}
+footer p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #FBFBFB;
+    font-family: "Poppins", sans-serif;
+    position: absolute;
+   left: 50%;
+   transform: translatex(-50%);
+   bottom: 0;
+   margin-bottom: 0 !important;
+}
+ /* ------footer--part end---- */
