--- a/css/responsive.css
+++ b/css/responsive.css
@@ -64,18 +64,25 @@
  }   
  .banner_text h1 {
     font-weight: 200;
-	font-size: 45px;
-	line-height: 60px;
+	font-size: 65px;
+	line-height: 80px;
 	letter-spacing: 0;
 	margin-bottom: 20px;
 }
- .banner_text h1 span {
-	font-weight: 500;
-	overflow:visible;
-	white-space: nowrap;
-	border-right: 0;
-	animation: type 1.7s steps(90) .4s normal both, cursor 1s step-end infinite;
-	position: relative;
+@keyframes type {
+    from {
+        width: 0;
+    }
+    
+    to {
+        width: 80%;
+    }
+}
+
+@keyframes cursor {
+    50% {
+        border-color: transparent;
+    }
 }
 .banner_text .text_line {
 	width: 100%;
@@ -124,12 +131,6 @@
 #product_ifo {
 	padding-top: 80px;
 	padding-bottom: 30px;
-}
-#product_ifo .product_info_img{
-   display: none;
-}
-#product_ifo .responsiv_info_img{
-   display: block;
 }
 #product_ifo .product_ditels {
 	margin-top: 30px;
@@ -185,13 +186,13 @@
  }
 .rack_list {
 	align-items: start;
-	padding-top: 50px;
+	padding-top: 323px;
 }
- .Accessories_row_2 .responsive_rack_img{
-    display: block;
-}
-#Accessories .sopping_rack_img{
-	display: none;
+#Accessories .sopping_rack_img {
+	width: 100%;
+	position: absolute;
+	top: 900px;
+	left: 0;
 }
 .more_Accessories {
 	width: 100%;
@@ -199,7 +200,8 @@
 	text-align: center;
 }
 .more_Accessories h3 {
-	font-size: 25px;
+	font-size: 24px;
+	padding: 0 8px;
 }
  /* ------Accessories row 2 part css end--- */
  /* ------gallery part start----- */
@@ -248,9 +250,9 @@
 	padding-bottom: 80px;
 }
 .my_slider_2 .slider_items .single_slider_item {
-	width: 296px;
+	width: 100%;
 	margin: 0 auto;
-	height: auto;
+	height: 366px;
 }
 .my_slider_2 .slider_items .single_slider_item h2 {
 	width: 250px;
@@ -322,9 +324,6 @@ footer p {
 footer .footer_img{
 	display: none;
 }
-#respons .responsiv_footer_img{
-	display: block;
-}
 /* ----footer part end--- */
 }
 /* ----Extra small device responsive css end ---- */
@@ -385,10 +384,24 @@ footer .footer_img{
  #banner .responsive_baner_img{
     display: block;
  } 
-.banner_text h1 {
-	font-size: 41px;
-	line-height: 55px;
- }
+ .banner_text h1 {
+	font-size: 65px;
+}
+ @keyframes type {
+    from {
+        width: 0;
+    }
+    
+    to {
+        width: 82%;
+    }
+}
+
+@keyframes cursor {
+    50% {
+        border-color: transparent;
+    }
+}
  .banner_text .text_line {
 	width: 100%;
 	margin-top: 60px;
@@ -411,14 +424,8 @@ footer .footer_img{
  #product_ifo {
 	padding-bottom: 60px;
  }
-#product_ifo .product_info_img{
-   display: none;
-}
-#product_ifo .responsiv_info_img{
-   display: block;
-}
 #product_ifo .product_ditels {
-	margin-top: 30px;
+	margin-top: 550px;
 }
 /* -------product_ part end ------- */
 /* -------motor part start ------- */
@@ -448,14 +455,14 @@ footer .footer_img{
 .Accessories_row_2{
 	margin-top: 100px;
 }
-.Accessories_row_2 .responsive_rack_img{
-    display: block;
-}
-#Accessories .sopping_rack_img{
-	display: none;
+#Accessories .sopping_rack_img {
+	width: 100%;
+	position: absolute;
+	top: 1050px;
+	left: 0;
 }
 .rack_list {
-	padding-top: 60px;
+	padding-top: 360px;
 	align-items: start;
 }
 .more_Accessories {
@@ -507,10 +514,6 @@ footer .footer_img{
 .my_slider_2 .slider_items .single_slider_item {
 	width: 250px;
 }
-.slider_items .single_slider_item h2 {
-	width: 220px;
-	height: 189px;
-}
 .my_slider_2 {
 	position: relative;
 	display: flex;
@@ -542,10 +545,195 @@ footer {
 footer .footer_img{
 	display: none;
 }
-#respons .responsiv_footer_img{
-	display: block;
-}
 /* ----footer part css end------ */
-
 }
 /* -----small device - responsive css end ---- */
+
+/* -----small device- responsive css start ---- */
+@media (min-width:768px) and (max-width:991.98px){
+/* ---commom--css----- */
+/* ----manu css --end  ------ */ 
+.navbar-toggler{
+    padding: 0;
+    border: 0;
+    font-size: 24px;
+}
+.navbar-toggler:focus {
+	box-shadow: none;
+}
+.main_manu .main_ul li:hover::before {
+	width: 0;
+}
+.main_manu .main_ul {
+	flex-direction: row;
+	gap: 25px;
+   
+    align-items: center;
+	
+	padding-top: 10px;
+}
+.ul_botton{
+	display: flex;
+	border-top: 1px solid #EAE8F3;
+	padding-top: 20px;
+	 margin-top: 25px;
+}
+.main_manu .main_ul li:hover ul {
+    visibility: hidden;
+}
+.main_manu .main_ul .fit_before:hover::before{
+    width: 0;
+}
+/* -------manu part end--------- */
+/* -------banner part start ------- */
+#banner .banner_img{
+    display: none;
+ }
+ #banner .responsive_baner_img{
+    display: block;
+ } 
+ /* -------banner part start ------- */
+ /* ----banner text part css start---- */
+ @keyframes type {
+    from {
+        width: 0;
+    }
+    
+    to {
+        width: 84%;
+    }
+}
+@keyframes cursor {
+    50% {
+        border-color: transparent;
+    }
+}
+.banner_text .text_line {
+	width: 75%;
+	margin-top: 70px;
+	margin-bottom: 60px;
+}
+.banner_text h1 {
+	font-size: 85px;
+}
+ /* ----banner text part css end---- */
+/* ----count_up part css start---- */
+#count_up {
+	padding-top: 130px;
+}
+.all_counters {
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+.all_counters .single_counter {
+	width: 220px;
+	margin-top: 20px;
+}
+/* ----count_u part css end---- */
+/* ----motor part css end---- */
+#motor {
+	padding-top: 70px;
+}
+/* ----motor part css end---- */
+/* -------product  part start ------- */
+ #product_ifo {
+	padding-bottom: 60px;
+ }
+#product_ifo .product_ditels {
+	margin-top: 800px;
+	justify-content: start;
+}
+#product_ifo .product_info_img {
+	position: absolute;
+	top: 270px;
+	left: 50%;
+	transform: translatex(-50%);
+	width: 90%;
+}
+/* -------product  part end ------- */
+#Accessories {
+	padding-top: 200px;
+}
+
+.Accessories_row_2{
+	margin-top: 100px;
+}
+#Accessories .sopping_rack_img {
+	width: 90%;
+	top: 1260px;
+}
+.rack_list {
+	padding-top: 350px;
+	align-items: start;
+}
+.more_Accessories {
+	width: 100%;
+	height: 88px;
+	margin-top: 70px;
+}
+/* -------Accessories part end ------- */
+#gallery{
+	padding-bottom: 90px;
+}
+#gallery .gallery_col_1 {
+	margin-top: 120px;
+}
+#gallery .gallery_img {
+	width: 80%;
+	margin: 0 auto 55px;
+}
+.gallery_col_1 .gallery_buttons {
+	align-items: center;
+}
+#gallery .gallery_col_2 {
+	margin-top: 80px;
+}
+.my_slider .slider-nav {
+	bottom: -113px;
+}
+#colors {
+	padding-bottom: 280px;
+}
+/* ---testimonials------ */
+/* -------testimonials part start ------- */
+#Testimonials {
+	padding-top: 70px;
+	padding-bottom: 125px;
+}
+.my_slider_2 .slider_items .single_slider_item {
+	width: 300px;
+}
+.my_slider_2 {
+	position: relative;
+	display: flex;
+	flex-wrap: wrap;
+}
+.my_slider_2 .slider_items .single_slider_item {
+	width: 250px;
+}
+.my_slider_2 {
+	position: relative;
+	display: flex;
+	flex-wrap: wrap;
+}
+.slider_items .single_slider_item h2 {
+	width: 200px;
+	height: 126px;
+	font-size: 17px;
+}
+.arrow2 {
+	right: 40%;
+}
+/* ----footer part css start----- */
+footer {
+	padding-top: 100px;
+	padding-bottom: 110px;
+}
+footer .footer_row {
+	justify-content: center;
+}
+footer .footer_img{
+	display: none;
+}
+/* ----footer part css end------ */
+}
